feat: Add SecurityStack and update ConfigurationManagementStack with CloudWatch permissions